<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/ic_browser"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/fragment_sensors"
            android:icon="@drawable/ic_sensors"
            android:title="@string/menu_sensors" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_calculator"
                android:title="@string/menu_calculator"
                android:icon="@drawable/ic_calculator"/>
            <item
                android:id="@+id/audioRecord"
                android:title="@string/menu_audio_record"
                android:icon="@drawable/ic_media_record"/>
            <item
                android:id="@+id/fragment_photo"
                android:title="@string/menu_photo"
                android:icon="@drawable/ic_photo"/>
        </menu>
    </item>

</menu>
