<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.belov.mirea_project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.belov.mirea_project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.mirea.belov.mirea_project.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_brouser"
        android:name="ru.mirea.belov.mirea_project.fragment_browser"
        android:label="fragment_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.belov.mirea_project.fragment_calculator"
        android:label="calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/audioRecord"
        android:name="ru.mirea.belov.mirea_project.fragment_audio_record"
        android:label="fragment_audio_record"
        tools:layout="@layout/fragment_audio_record" />
    <fragment
        android:id="@+id/fragment_photo"
        android:name="ru.mirea.belov.mirea_project.fragment_photo"
        android:label="fragment_photo"
        tools:layout="@layout/fragment_photo" />
    <fragment
        android:id="@+id/fragment_sensors"
        android:name="ru.mirea.belov.mirea_project.fragment_sensors"
        android:label="fragment_sensors"
        tools:layout="@layout/fragment_sensors" />
</navigation>